# adultnea

./: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: import.yml
adultnea/: __init__.py  __main__.py  client.py  config.py  utils.py
adultnea/modules/: info.py  meta.py  pat.py  pkgssearch.py  roll.py
